--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <div class="logo">
-                <div><img src="img/logo_img.png" alt="収穫祭"></div>
+                <div><img src="img/logo.png" alt="収穫祭"></div>
                 <div>
                     <h2>慶應義塾志木高等学校<br></h2>
                     <h1>収穫祭</h1>
