横幅の制限

--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
     <div class="header">
         <div class="logo">
                 <div><img src="img/logo.png" alt="収穫祭"></div>
-                <div>
-                    <h2>慶應義塾志木高等学校<br></h2>
-                    <h1>収穫祭</h1>
-                </p>     
+                <div class="logo_words">
+                    <div>
+                        <h2>慶應義塾志木高等学校<br></h2>
+                        <h1>収穫祭</h1>
+                    </div> 
+                    <div>
+                        <h2>10/27 - 10/28<br></h2>
+                    </div>  
+                </div>
+                
         </div>
     </div>
 </body>
