--- a/index.html
+++ b/index.html
@@ -22,9 +22,25 @@
                     <div>
                         <h2>10/27 - 10/28<br></h2>
                     </div>  
-                </div>
-                
+                </div>   
         </div>
+    </div>
+    <div class="content">
+        <div class="c_1">
+            <h2>開催情報</h2>
+            <p>
+                更新日 : 2023/10/03 <br>
+                <b>入場制限なしの通常開催を予定しています</b><br>
+                - 状況により変更となる可能性がございます。速報は各種SNSをご覧ください。<br>
+                <b>後夜祭はチケット制による入場制限を行います</b><br>
+                - 後夜祭は28日(日)に実施予定。チケットは当日先着順にて配布されます。<br>
+                - 後夜祭の演目については、今後掲載します。
+            </p>
+        </div>
+        <div class="c_2">
+
+        </div>
+
     </div>
 </body>
 </html>
