--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>慶應義塾志木高等学校 第76回収穫祭ホームページ</title>
-    <meta name="discription" content="慶應義塾志木高等学校 第76回収穫祭のホームページへようこそ">
+    <title>テスト 第76回収穫祭テストホームページ</title>
+    <meta name="discription" content="テスト 第76回収穫祭テストホームページへようこそ">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/reset.css">
 </head>
