--- a/index.html
+++ b/index.html
@@ -12,18 +12,27 @@
 
 <body>
     <div class="header">
-        <div class="logo">
-                <div><img src="img/logo.png" alt="収穫祭"></div>
-                <div class="logo_words">
-                    <div>
-                        <h2>慶應義塾志木高等学校<br></h2>
-                        <h1>収穫祭</h1>
-                    </div> 
-                    <div>
-                        <h2>10/27 - 10/28<br></h2>
-                    </div>  
-                </div>   
-        </div>
+        <div class="header2">
+            <div class="logo">
+                    <div><img src="img/logo.png" alt="収穫祭"></div>
+                    <div class="logo_words">
+                        <div>
+                            <h2>慶應義塾志木高等学校<br></h2>
+                            <h1>収穫祭</h1>
+                        </div> 
+                        <div>
+                            <h2>10/27 - 10/28<br></h2>
+                        </div>  
+                    </div>   
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href="./sub/floor.html">フロアマップ</a></li>
+                    <li><a href="./sub/floor.html">フロアマップ</a></li>
+                    <li><a href="./sub/floor.html">フロアマップ</a></li>
+                </ul>
+            </div>   
+        </div>  
     </div>
     <div class="content">
         <div class="c_1">
