--- a/index.html
+++ b/index.html
@@ -12,28 +12,27 @@
 
 <body>
     <div class="header">
-        <div class="header2">
-            <div class="logo">
-                    <div><img src="img/logo.png" alt="収穫祭"></div>
-                    <div class="logo_words">
-                        <div>
-                            <h2>慶應義塾志木高等学校<br></h2>
-                            <h1>収穫祭</h1>
-                        </div> 
-                        <div>
-                            <h2>10/27 - 10/28<br></h2>
-                        </div>  
-                    </div>   
-            </div>
-            <div class="links">
-                <ul>
-                    <li><a href="./sub/floor.html">フロアマップ</a></li>
-                    <li><a href="./sub/floor.html">フロアマップ</a></li>
-                    <li><a href="./sub/floor.html">フロアマップ</a></li>
-                </ul>
-            </div>   
+        <div class="logo">
+                <div><img src="img/logo.png" alt="収穫祭"></div>
+                <div class="logo_words">
+                    <div>
+                        <h2>慶應義塾志木高等学校<br></h2>
+                        <h1>収穫祭</h1>
+                    </div> 
+                    <div>
+                        <h2>10/27 - 10/28<br></h2>
+                    </div>  
+                </div>   
         </div>  
     </div>
+    <div class="header_links">
+        <ul>
+            <li><a href="./index.html"><img src="img/logo.png" alt="ホーム"></a></li>
+            <li><a href="./sub/floor.html">フロアマップ</a></li>
+            <li><a href="./sub/floor.html">ステージスケジュール</a></li>
+            <li><a href="./sub/floor.html">展示紹介</a></li>
+        </ul>
+    </div>  
     <div class="content">
         <div class="c_1">
             <h4>開催情報</h4>
@@ -48,6 +47,14 @@
         </div>
         <div class="c_2">
             <h4>フロアマップ</h4>
+            <p>
+                更新日 : 2023/10/03 <br>
+                <b>入場制限なしの通常開催を予定しています</b><br>
+                - 状況により変更となる可能性がございます。速報は各種SNSをご覧ください。<br>
+                <b>後夜祭はチケット制による入場制限を行います</b><br>
+                - 後夜祭は28日(日)に実施予定。チケットは当日先着順にて配布されます。<br>
+                - 後夜祭の演目については、今後掲載します。
+            </p>
             <p>
                 更新日 : 2023/10/03 <br>
                 <b>入場制限なしの通常開催を予定しています</b><br>
