--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <div class="top">
         <div class="logo">
             <div>
                 <h1>
@@ -30,35 +30,31 @@
         </div>  
     </div>
     <div class="content">
+        <div class="top_message">
+            今年のテーマは<br>
+            「Fantasia」<br>
+            各展示が己の個性を出しながら<br>
+            夢の世界を形作ります
+        </div>
         <div class="c_1">
             <h4>開催情報</h4>
             <p>
                 更新日 : 2023/10/03 <br>
-                <b>入場制限なしの通常開催を予定しています</b><br>
+                <b>開催日時</b><br>
+                - 10/27(土)及び10/28(日) <br>
+                - 9時より16時まで<br>
+                <br>
+                <b>入場制限なし</b><br>
+                - 入場制限なしの通常開催を予定しています
                 - 状況により変更となる可能性がございます。速報は各種SNSをご覧ください。<br>
-                <b>後夜祭はチケット制による入場制限を行います</b><br>
+                <br>
+                <b>後夜祭はチケット制による入場制限あり</b><br>
                 - 後夜祭は28日(日)に実施予定。チケットは当日先着順にて配布されます。<br>
                 - 後夜祭の演目については、今後掲載します。
             </p>
         </div>
         <div class="c_2">
             <h4>フロアマップ</h4>
-            <p>
-                更新日 : 2023/10/03 <br>
-                <b>入場制限なしの通常開催を予定しています</b><br>
-                - 状況により変更となる可能性がございます。速報は各種SNSをご覧ください。<br>
-                <b>後夜祭はチケット制による入場制限を行います</b><br>
-                - 後夜祭は28日(日)に実施予定。チケットは当日先着順にて配布されます。<br>
-                - 後夜祭の演目については、今後掲載します。
-            </p>
-            <p>
-                更新日 : 2023/10/03 <br>
-                <b>入場制限なしの通常開催を予定しています</b><br>
-                - 状況により変更となる可能性がございます。速報は各種SNSをご覧ください。<br>
-                <b>後夜祭はチケット制による入場制限を行います</b><br>
-                - 後夜祭は28日(日)に実施予定。チケットは当日先着順にて配布されます。<br>
-                - 後夜祭の演目については、今後掲載します。
-            </p>
 
         </div>
 
