--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="content">
         <div class="top_message">
             今年のテーマは<br>
-            「Fantasia」<br>
+            「 <b>Fantasia</b> 」<br>
             各展示が己の個性を出しながら<br>
             夢の世界を形作ります
         </div>
