--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="c_1">
             <h4>開催情報</h4>
             <p>
-                更新日 : 2023/10/03 <br>
+                更新日 : 2023/10/04 <br>
                 <b>開催日時</b><br>
                 - 10/27(土)及び10/28(日) <br>
                 - 9時より16時まで<br>
@@ -55,8 +55,17 @@
         </div>
         <div class="c_2">
             <h4>フロアマップ</h4>
-
+            <p>
+                <b>1F</b> 
+                <img src="./img/1F.png" alt="1F図">
+            </p>
+            <p>
+                <b>2F</b> 
+                <img src="./img/1F.png" alt="1F図">
+            </p>
         </div>
+    </div>
+    <div class="Footer">
 
     </div>
 </body>
