--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 - 9時より16時まで<br>
                 <br>
                 <b>入場制限なし</b><br>
-                - 入場制限なしの通常開催を予定しています
+                - 入場制限なしの通常開催を予定しています <br>
                 - 状況により変更となる可能性がございます。速報は各種SNSをご覧ください。<br>
                 <br>
                 <b>後夜祭はチケット制による入場制限あり</b><br>
