--- a/index.html
+++ b/index.html
@@ -32,12 +32,29 @@
     </header>
     <div class="top">
         <div class="logo">
-            <div>
-                <h1>
-                    収<br>
-                    穫<br>
-                    祭<br>
-                </h1>
+            <div class="logo_word">
+                <div>
+                    <h1>
+                        収<br>
+                        穫<br>
+                        祭<br>
+                    </h1>
+                </div>
+                <div>
+                    <h2>
+                        <br>
+                        慶 <br>
+                        應 <br>
+                        義 <br>
+                        塾 <br>
+                        志 <br>
+                        木<br>
+                        高<br>
+                        等<br>
+                        学<br>
+                        校
+                    </h2>
+                </div>
             </div> 
             <div>
                 <h2>
@@ -50,6 +67,8 @@
     </div>
     <div class="content">
         <div class="top_message">
+            <h4>慶應志木高校文化祭</h4><br>
+            
             今年のテーマは<br>
             「 <b>Fantasia</b> 」<br>
             各展示が己の個性を出しながら<br>
