--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
                     </h2>
                 </div>
             </div> 
-            <div>
+            <div class="date">
                 <h2>
-                    10/27
-                    <br>
-                    ~10/28
+                    10/27~10/28
                 </h2>
             </div>   
         </div>  
